@@ -3508,17 +3508,39 @@ end
 		<command id="getrecttrans">
 			<canon>get rect trans (handle)</canon>
 			<shortname>get rect trans</shortname>
-			<description>Given a rect slice <p>handle</p>, returns one of: the constant <p>trans:fuzzy</p> if it is drawn semi-transparent, <p>trans:hollow</p> if it is fully transparent, or <p>trans:solid</p> (equal to <ref>false</ref>) if it is drawn solid.</description>
+			<description>Given a rect slice <p>handle</p>, returns one of: the constant <p>trans:fuzzy</p> if it is drawn semi-transparent (with any fuzziness percentage from 1 to 99: see <ref>getrectfuzziness</ref>), <p>trans:hollow</p> if it is fully transparent, or <p>trans:solid</p> (equal to <ref>false</ref>) if it is drawn solid.</description>
 			<seealso>
 				<ref>setrecttrans</ref>
+				<ref>getrectfuzziness</ref>
 			</seealso>
 		</command>
 		<command id="setrecttrans">
 			<canon>set rect trans (handle, transparency setting)</canon>
 			<shortname>set rect trans</shortname>
-			<description>Given a rect slice <p>handle</p>, change how transparently it is drawn. For <p>transparency setting</p>, pass in one of the constants <p>trans:fuzzy</p> for semi-transparency (checkered), <p>trans:hollow</p> for fully transparent (the border drawn only), or <p>trans:solid</p> (equal to <ref>false</ref>) for solid.</description>
+			<description>Given a rect slice <p>handle</p>, change how transparently it is drawn. For <p>transparency setting</p>, pass in one of the constants <p>trans:fuzzy</p> for semi-transparency (checkered, ie. 50% fuzziness), <p>trans:hollow</p> for fully transparent (the border drawn only), or <p>trans:solid</p> (equal to <ref>false</ref>) for solid. Note that this command is strictly weaker than <ref>setrectfuzziness</ref>, which provides much finer control of rectangle slice transparency/translucency.</description>
 			<seealso>
 				<ref>getrecttrans</ref>
+				<ref>setrectfuzziness</ref>
+			</seealso>
+		</command>
+		<command id="getrectfuzziness">
+			<canon>get rect fuzziness (handle)</canon>
+			<shortname>get rect fuzziness</shortname>
+			<description>Given a rect slice <p>handle</p>, returns the percentage translucency of the slice, from 0 to 100: 0 if the rectangle is hollow, 100 if it is opaque, and a value between 1 and 99 if it is fuzzy. Rectangles set to trans:fuzzy using <ref>setrecttrans</ref> default to 50% translucency.</description>
+			<seealso>
+				<ref>setrecttrans</ref>
+				<ref>getrecttrans</ref>
+				<ref>setrectfuzziness</ref>
+			</seealso>
+		</command>
+		<command id="setrectfuzziness">
+			<canon>set rect fuzziness (handle, percent)</canon>
+			<shortname>set rect fuzziness</shortname>
+			<description>Sets the percentage translucency of a rect slice <p>handle</p> to <p>percent</p>. A <p>percent</p> of 0 is equivalent to <ref>setrecttrans</ref>(handle, trans:hollow), a <p>percent</p> of 100 is equivalent to <ref>setrecttrans</ref>(handle, trans:opaque), and anything inbetween 1 and 99 implicitly does <ref>setrecttrans</ref>(handle, trans:fuzzy) as well as setting the percentage.</description>
+			<seealso>
+				<ref>setrecttrans</ref>
+				<ref>getrecttrans</ref>
+				<ref>getrectfuzziness</ref>
 			</seealso>
 		</command>
 		<command id="getellipsebordercol">
